Проверка статус кодов